syntax = "proto3";

package golem.component;

import "golem/common/account_id.proto";
import "golem/common/environment.proto";
import "golem/common/application.proto";
import "golem/component/component_files.proto";
import "golem/component/component_metadata.proto";
import "golem/component/component_type.proto";
import "golem/component/plugin_installation.proto";
import "golem/component/component_id.proto";
import "google/protobuf/timestamp.proto";

message Component {
  ComponentId component_id = 1;
  uint64 revision = 2;
  string component_name = 3;
  uint64 component_size = 4;
  ComponentMetadata metadata = 5;
  golem.common.EnvironmentId environment_id = 6;
  google.protobuf.Timestamp created_at = 7;
  optional ComponentType component_type = 8;
  repeated golem.component.InitialComponentFile files = 9;
  repeated golem.component.PluginInstallation installed_plugins = 10;
  golem.common.AccountId account_id = 11;
  map<string, string> env = 12;
  repeated uint32 wasm_hash_bytes = 13;
  golem.common.ApplicationId application_id = 14;
}
